--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,10 @@
           <a href="/contact.html" class="active">상담</a>
         </nav>
       </div>
-      <div class="right">
+      <div class="right" style="display:flex;align-items:center;gap:8px">
         <span id="navUser" class="hidden"></span>
         <button id="btnOpenLogin" class="btn primary">로그인</button>
+        <button id="btnHamburger" class="hamburger" aria-label="메뉴"><span></span><span></span><span></span></button>
       </div>
     </div>
   </header>
